# diffkemp

./: .clang-format  .flake8  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  diffkemp.py  flake.nix  function_comparator.py  module_comparator.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: builds.yml  ci.yml  code-style.yml  viewer.yml
cmake/: FindZ3.cmake
diffkemp/: __init__.py  cli.py  compare.py  config.py  diffkabi.py  diffkemp.in  diffkemp.py  diffsysctl.py  function_comparator.py  function_coupling.py  function_list.py  module_analyser.py  module_comparator.py  output.py  snapshot.py  utils.py  viewer.py
diffkemp/building/: CMakeLists.txt  __init__.py  build_c_project.py  build_kernel.py  build_utils.py  cc_wrapper.py
diffkemp/building/building_files/: build_c_project_file.py  build_kernel.py  build_utils.py
diffkemp/building/building_snapshot_files/: build_c_project_file.py  build_kernel.py
diffkemp/building/cc_wrapper/: CMakeLists.txt  cc_wrapper.cpp  cc_wrapper.py  cc_wrapper_utils.cpp  cc_wrapper_utils.h
diffkemp/compiler/: compiler.py
diffkemp/llvm_ir/: __init__.py  build_llvm.py  compiler.py  (+14 more)
diffkemp/simpll/: CMakeLists.txt  CPatternPass.cpp  CPatternPass.h  Config.cpp  Config.h  ControlFlowGraphUtils.cpp  ControlFlowGraphUtils.h  CustomPatternComparator.cpp  CustomPatternComparator.h  CustomPatternSet.cpp  CustomPatternSet.h  DebugInfo.cpp  DebugInfo.h  DifferentialFunctionComparator.cpp  DifferentialFunctionComparator.h  DifferentialGlobalNumberState.cpp  DifferentialGlobalNumberState.h  EquivalenceSlicer.cpp  EquivalenceSlicer.h  FFI.cpp  FFI.h  FieldAccessUtils.cpp  FieldAccessUtils.h  InstPatternComparator.cpp  InstPatternComparator.h  Logger.cpp  Logger.h  MacroUtils.cpp  MacroUtils.h  ModuleAnalysis.cpp  ModuleAnalysis.h  ModuleComparator.cpp  ModuleComparator.h  Output.cpp  Output.h  PatternComparator.cpp  PatternComparator.h  PatternFunctionComparator.cpp  PatternFunctionComparator.h  PatternSet.cpp  (+25 more)
diffkemp/simpll/llvm-lib/10/: FunctionComparator.cpp
diffkemp/simpll/llvm-lib/11/: FunctionComparator.cpp  FunctionComparator.h
diffkemp/simpll/llvm-lib/12/: FunctionComparator.cpp  FunctionComparator.h
diffkemp/simpll/llvm-lib/13/: FunctionComparator.h
diffkemp/simpll/llvm-lib/14/: FunctionComparator.cpp  FunctionComparator.h
diffkemp/simpll/llvm-lib/15/: FunctionComparator.cpp
diffkemp/simpll/llvm-lib/16/: FunctionComparator.cpp  FunctionComparator.h
diffkemp/simpll/llvm-lib/17/: FunctionComparator.cpp  FunctionComparator.h
diffkemp/simpll/llvm-lib/18/: FunctionComparator.cpp  FunctionComparator.h
diffkemp/simpll/llvm-lib/19/: FunctionComparator.cpp  FunctionComparator.h
diffkemp/simpll/llvm-lib/20/: FunctionComparator.cpp  FunctionComparator.h
diffkemp/simpll/llvm-lib/5/: FunctionComparator.cpp  FunctionComparator.h
diffkemp/simpll/llvm-lib/6/: FunctionComparator.cpp  FunctionComparator.h
diffkemp/simpll/llvm-lib/7/: FunctionComparator.cpp  FunctionComparator.h
diffkemp/simpll/llvm-lib/8/: FunctionComparator.cpp  FunctionComparator.h  LICENSE
diffkemp/simpll/llvm-lib/9/: FunctionComparator.h
diffkemp/simpll/passes/: CalledFunctionsAnalysis.cpp  CalledFunctionsAnalysis.h  ControlFlowSlicer.cpp  ControlFlowSlicer.h  FieldAccessFunctionGenerator.cpp  FieldAccessFunctionGenerator.h  FunctionAbstractionsGenerator.cpp  FunctionAbstractionsGenerator.h  MergeNumberedFunctionsPass.cpp  MergeNumberedFunctionsPass.h  PrintContentRemovalPass.cpp  PrintContentRemovalPass.h  ReduceFunctionMetadataPass.cpp  ReduceFunctionMetadataPass.h  RemoveLifetimeCallsPass.cpp  RemoveLifetimeCallsPass.h  RemoveUnusedReturnValuesPass.cpp  RemoveUnusedReturnValuesPass.h  SeparateCallsToBitcastPass.cpp  SeparateCallsToBitcastPass.h  SimplifyKernelFunctionCallsPass.cpp  SimplifyKernelFunctionCallsPass.h  SimplifyKernelGlobalsPass.cpp  SimplifyKernelGlobalsPass.h  StructHashGeneratorPass.cpp  StructHashGeneratorPass.h  StructureDebugInfoAnalysis.cpp  StructureDebugInfoAnalysis.h  StructureSizeAnalysis.cpp  StructureSizeAnalysis.h  UnifyGlobalsNumberingPass.cpp  UnifyGlobalsNumberingPass.h  UnifyMemcpyPass.cpp  UnifyMemcpyPass.h  UnionHashGeneratorPass.cpp  UnionHashGeneratorPass.h  VarDependencySlicer.cpp  VarDependencySlicer.h  VarValueDependencySlicer.cpp  VarValueDependencySlicer.h
docker/: Dockerfile  run-container.sh
docs/: CONTRIBUTING.md  architecture.md  development.md  installation.md  usage.md
patterns/: fig22  fig22.c  pattern-config.yaml  slide_statements-if.c  slide_statements.c  test  test.c
rpm/: diffkemp.spec
slicer/: ParamDependencySlicer.cpp  ParamDependencySlicer.h  slicer.py
tests/: regression_test.py
tests/unit_tests/: CMakeLists.txt  CMakeLists.txt.in  build_llvm_test.py  build_test.py  caching_test.py  conftest.py  function_list_test.py  function_syntax_diff_test.py  kernel_llvm_source_builder_test.py  kernel_module_test.py  kernel_source_test.py  kernel_source_tree_test.py  llvm_sysctl_module_test.py  result_test.py  run_e2e_tests.py.in  run_pytest_tests.py.in  snapshot_test.py  source_tree_test.py
tests/unit_tests/cc_wrapper/: CMakeLists.txt  CcWrapperUtilsTest.cpp
tests/unit_tests/simpll/: CMakeLists.txt  CMakeLists.txt.in  DFCLlvmIrTest.cpp  DFCLlvmIrTest.h  DifferentialFunctionComparatorTest.cpp  DifferentialFunctionComparatorTest.h  FieldAccessUtilsTest.cpp  SimpLLTest.cpp
tests/unit_tests/simpll/passes/: CalledFunctionsAnalysisTest.cpp  FunctionAbstractionsGeneratorTest.cpp  MergeNumberedFunctionsPassTest.cpp  ReduceFunctionMetadataPassTest.cpp  RemoveLifetimeCallPassTest.cpp  RemoveUnusedReturnValuesPassTest.cpp  SeparateCallsToBitcastPassTest.cpp  SimplifyKernelFunctionCallsPassTest.cpp  SimplifyKernelGlobalsPassTest.cpp  StructHashGeneratorPassTest.cpp  StructureSizeAnalysisTest.cpp  UnifyMemcpyPassTest.cpp  VarDependencySlicerTest.cpp
tools/: check-clang-format.sh  find_regressions.sh  func_comparator_return_vals.gdb  simpll_clean.sh
view/: .eslintrc.yaml  .gitignore  cypress.config.js  index.html  package-lock.json  package.json  vite.config.js
(+490 files in other folders)
