[build-system]
requires = [
    "setuptools",
    "cffi",
]
build-backend = "setuptools.build_meta"

[project]
name = "Diffkemp"
version = "0.6.1"
dependencies = [
    "flake8",
    "pytest",
    "pytest-mock",
    "pyyaml",
    "cffi",
]
readme = "README.md"
description = "A tool for semantic difference analysis of kernel functions"
authors = [
    {name = "Viktor Malik", email = "vmalik@redhat.com"},
]

[tool.setuptools]
packages = [
    "diffkemp",
    "diffkemp.building",
    "diffkemp.llvm_ir",
    "diffkemp.semdiff",
    "diffkemp.simpll",
    "diffkemp.syndiff",
]

[project.scripts]
diffkemp = 'diffkemp.cli:run_from_cli'

